--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -9,9 +9,11 @@
     <title>{% block title %}Julian Petrich{% endblock title %}</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+
 </head>
 <body>
 
@@ -45,15 +47,15 @@
     </nav>
 
     <main>
-        {% block content %}
-        {% endblock content %}
+        <div class="container my-5">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12">
+                    {% block content %}
+                    {% endblock content %}
+                </div>
+            </div>
+        </div>
     </main>
-
-    <!-- Javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-            crossorigin="anonymous">
-    </script>
 
     <!-- Footer -->
     <footer class="bg-dark text-center">
@@ -81,6 +83,12 @@
             Copyright © 2021 Julian Petrich
         </div>
     </footer>
+
+    <!-- javascript !-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous">
+    </script>
 
 </body>
 </html>
