--- a/app/templates/pages/projects.html
+++ b/app/templates/pages/projects.html
@@ -1,29 +1,40 @@
 {% load static %}
-<div class="container p-5" id="projects">
-    <div class="row justify-content-md-center">
-        <div class="col-lg-2">
-            <h2>Projects</h2>
-        </div>
-        <div class="col-lg-7">
-        </div>
+
+<h1>Case Studies</h1>
+
+<div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carousel" data-bs-slide-to="0"
+                class="active" aria-current="true" aria-label="Slide 1">
+        {% for post in post_list %}
+            {% if forloop.counter|divisibleby:"4" %}
+                </button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="{% widthratio forloop.counter 4 1 %}"
+                        aria-label="Slide {% widthratio forloop.counter 4 1 %}">
+            {% endif %}
+            </button>
+        {% endfor %}
     </div>
-    <div class="row justify-content-md-center">
-        <div class="col-lg-9">
-            <div class="row justify-content-md-center">
+
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="card-group">
                 {% for post in post_list %}
-                    <div class="col-md-3">
-                        <div class="card mb-2">
-                            <img class="card-img-top" src="{{ post.cover.url }}">
+                    <div class="col-12 col-md-6 col-xl-3 mb-4 p-3">
+                        <div class="card">
+                            <img src="{{ post.cover.url }}" class="card-img-top" alt="{{ post.description_alt }}">
                             <div class="card-body">
-                                <a href="{{ post.get_absolute_url }}">
-                                    <h5 class="card-title">{{ post.title }}</h5>
-                                </a>
-                                <p class="card-text">{{ post.description }}</p>
+                                <h5 class="card-title">{{ post.title }}</h5>
+                                <p class="card-text">{{ post.description_short }}</p>
+                                <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read more</a>
                             </div>
                         </div>
                     </div>
-                {% endfor %}
+                {% if forloop.counter|divisibleby:"4" %}</div></div><div class="carousel-item"><div class="card-group">{% endif %}
+            {% endfor %}
             </div>
         </div>
     </div>
+
 </div>
