--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,6 @@
 <!-- templates/home.html -->
 {% extends '_base.html' %}
 {% block content %}
+    {% include 'pages/about.html' %}
+    {% include 'pages/projects.html' %}
 {% endblock content %}
