--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -27,7 +27,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light p-3">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'assets/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="{% static 'images/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
                 Julian Petrich
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
