--- a/app/templates/home/section-project-2.html
+++ b/app/templates/home/section-project-2.html
@@ -16,7 +16,7 @@
                 <div class="col-lg-1">
                 </div>
                 <div class="col-lg-6 p-3 align-self-end">
-                    <img src="{% static 'images/placeholder_gif.gif' %}" class="img-fluid mx-auto d-block" alt="" >
+                    <img src="{% static 'images/project_2.gif' %}" class="img-fluid mx-auto d-block" alt="" >
                 </div>
             </div>
         </div>
