--- a/app/templates/home/section-project-1.html
+++ b/app/templates/home/section-project-1.html
@@ -4,7 +4,7 @@
         <div class="col-10">
             <div class="row justify-content-md-center d-flex">
                 <div class="col-lg-6 p-3 align-self-end">
-                    <img src="{% static 'images/placeholder_gif.gif' %}" class="img-fluid mx-auto d-block" alt="">
+                    <img src="{% static 'images/project_1.gif' %}" class="img-fluid mx-auto d-block" alt="">
                 </div>
                 <div class="col-lg-1">
                 </div>
